--- a/eda.ipynb
+++ b/eda.ipynb
@@ -10,8 +10,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7d4f8602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b9603a5",
+   "metadata": {},
+   "source": [
+    "### Overview of Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ed5da5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X has 1212 data points, each with 832 features\n",
+      "y has 1212 labels\n",
+      "\n",
+      "max(y):  97.0\n",
+      "min(y):  42.0\n",
+      "mean(y): 69.89\n",
+      "std(y): 9.72\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = pd.read_csv('./data/X_train.csv')\n",
+    "y = pd.read_csv('./data/y_train.csv')\n",
+    "\n",
+    "# Every row in dataset has unique ID so carries no useful information\n",
+    "X = X.drop('id', axis=1)\n",
+    "y = y.drop('id', axis=1)\n",
+    "\n",
+    "# General information\n",
+    "print(f'X has {X.shape[0]} data points, each with {X.shape[1]} features')\n",
+    "print(f'y has {y.shape[0]} labels')\n",
+    "print()\n",
+    "\n",
+    "# Information about y\n",
+    "print('max(y): ', float(y.max().iloc[0]))\n",
+    "print('min(y): ', float(y.min().iloc[0]))\n",
+    "print(f'mean(y): {float(y.mean().iloc[0]):.2f}')\n",
+    "print(f'std(y): {float(y.std().iloc[0]):.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9be4c728",
+   "metadata": {},
+   "source": [
+    "#### Missing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "731067b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum missing values: 121/1212\n",
+      "Minimum missing values: 65/1212\n",
+      "Average missing values:  92.43028846153847\n",
+      "Std missing values:,  9.138719462730808\n",
+      "\n",
+      "There are 0 missing labels\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Information about missing features\n",
+    "X_nan_count = X.isna().sum()\n",
+    "print(f'Maximum missing values: {X_nan_count.max()}/{X.shape[0]}')\n",
+    "print(f'Minimum missing values: {X_nan_count.min()}/{X.shape[0]}')\n",
+    "print('Average missing values: ', X_nan_count.mean())\n",
+    "print('Std missing values:, ', X_nan_count.std())\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Information about missing labels\n",
+    "print(f'There are {int(y.isna().sum().iloc[0])} missing labels')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8762ee4f",
    "metadata": {},
    "outputs": [],
    "source": []
