--- a/eda.ipynb
+++ b/eda.ipynb
@@ -10,15 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "id": "7d4f8602",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T22:02:37.761308Z",
+     "start_time": "2025-10-27T22:02:37.758866Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -30,9 +35,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "c1ed5da5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T22:02:37.925914Z",
+     "start_time": "2025-10-27T22:02:37.770711Z"
+    }
+   },
+   "source": [
+    "X = pd.read_csv('./data/X_train.csv')\n",
+    "y = pd.read_csv('./data/y_train.csv')\n",
+    "\n",
+    "# Every row in dataset has unique ID so carries no useful information\n",
+    "X = X.drop('id', axis=1)\n",
+    "y = y.drop('id', axis=1)\n",
+    "\n",
+    "# General information\n",
+    "print(f'X has {X.shape[0]} data points, each with {X.shape[1]} features')\n",
+    "print(f'y has {y.shape[0]} labels')\n",
+    "print()\n",
+    "\n",
+    "# Information about y\n",
+    "print('max(y): ', y.y.max())\n",
+    "print('min(y): ', y.y.min())\n",
+    "print(f'mean(y): {y.y.mean():.2f}')\n",
+    "print(f'std(y): {y.y.std():.2f}')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -48,25 +76,7 @@
      ]
     }
    ],
-   "source": [
-    "X = pd.read_csv('./data/X_train.csv')\n",
-    "y = pd.read_csv('./data/y_train.csv')\n",
-    "\n",
-    "# Every row in dataset has unique ID so carries no useful information\n",
-    "X = X.drop('id', axis=1)\n",
-    "y = y.drop('id', axis=1)\n",
-    "\n",
-    "# General information\n",
-    "print(f'X has {X.shape[0]} data points, each with {X.shape[1]} features')\n",
-    "print(f'y has {y.shape[0]} labels')\n",
-    "print()\n",
-    "\n",
-    "# Information about y\n",
-    "print('max(y): ', float(y.max().iloc[0]))\n",
-    "print('min(y): ', float(y.min().iloc[0]))\n",
-    "print(f'mean(y): {float(y.mean().iloc[0]):.2f}')\n",
-    "print(f'std(y): {float(y.std().iloc[0]):.2f}')"
-   ]
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -78,9 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "731067b9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T22:02:37.938084Z",
+     "start_time": "2025-10-27T22:02:37.932648Z"
+    }
+   },
+   "source": [
+    "# Information about missing features\n",
+    "X_nan_count = X.isna().sum()\n",
+    "print(f'Maximum missing values: {X_nan_count.max()}/{X.shape[0]}')\n",
+    "print(f'Minimum missing values: {X_nan_count.min()}/{X.shape[0]}')\n",
+    "print('Average missing values: ', X_nan_count.mean())\n",
+    "print('Std missing values:, ', X_nan_count.std())\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Information about missing labels\n",
+    "print(f'There are {int(y.y.isna().sum())} missing labels')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -95,27 +122,65 @@
      ]
     }
    ],
-   "source": [
-    "# Information about missing features\n",
-    "X_nan_count = X.isna().sum()\n",
-    "print(f'Maximum missing values: {X_nan_count.max()}/{X.shape[0]}')\n",
-    "print(f'Minimum missing values: {X_nan_count.min()}/{X.shape[0]}')\n",
-    "print('Average missing values: ', X_nan_count.mean())\n",
-    "print('Std missing values:, ', X_nan_count.std())\n",
-    "\n",
-    "print()\n",
-    "\n",
-    "# Information about missing labels\n",
-    "print(f'There are {int(y.isna().sum().iloc[0])} missing labels')"
-   ]
+   "execution_count": 23
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8762ee4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "source": [
+    "#### Feature Selection\n",
+    "\n",
+    "Drop every feature column which has only zero entries.\n",
+    "\n",
+    "Drop every duplicate feature column.\n"
+   ],
+   "id": "866dddf336b28a31"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-27T23:27:58.095505Z",
+     "start_time": "2025-10-27T23:27:56.995600Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# spot feature columns with only zero or empty entries\n",
+    "zero_feature_cols = X.columns[(X.isna() | (X == 0.0)).all()]\n",
+    "print(f'Dropping {len(zero_feature_cols)} feature columns with only zero or empty entries.')\n",
+    "X_select = X.drop(zero_feature_cols, axis=1)\n",
+    "# drop duplicate feature columns\n",
+    "dup_feats = X_select.T.duplicated()\n",
+    "dup_samples = X_select.duplicated()\n",
+    "print(f'Dropping {dup_feats.sum()} duplicate feature columns and {dup_samples.sum()} duplicate sample rows.')\n",
+    "# drop duplicate features\n",
+    "X_select = X_select.loc[:, ~dup_feats]\n",
+    "print(f'After feature selection, X has {X_select.shape[1]} features remaining.')\n",
+    "# drop duplicate samples\n",
+    "X_select = X_select.loc[~dup_samples, :]\n",
+    "y_select = y.loc[~dup_samples, :]\n",
+    "print(f'After dropping duplicate samples, X has {X_select.shape[0]} data points remaining.')"
+   ],
+   "id": "48e9f005ddeaac6c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping 4 feature columns with only zero or empty entries.\n",
+      "Dropping 0 duplicate feature columns and 0 duplicate sample rows.\n",
+      "After feature selection, X has 828 features remaining.\n",
+      "After dropping duplicate samples, X has 1212 data points remaining.\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "\n",
+   "id": "ed515faa651524e2"
   }
  ],
  "metadata": {
